--- a/stylefile.css
+++ b/stylefile.css
@@ -35,4 +35,10 @@ body {
   p{
     font-family: Bahnschrift Light;
   }
-
+}
+li a {
+ display: block;
+padding: 8px;
+background-color: #8a9ace;
+color: black;
+}
