--- a/stylefile.css
+++ b/stylefile.css
@@ -42,11 +42,11 @@ body {
     overflow: hidden;
   }
   
-  li {
+  li.a {
     float: left; 
   }
   
-  li a {
+  li.a a {
     display: block;
     padding: 8px;
     background-color: #8a9ace;
