--- a/JSCSS.css
+++ b/JSCSS.css
@@ -1,16 +1,21 @@
 /* JSCSS.css */
-button
-{
-    background:rgba(104, 16, 16, 0.3);
-    border-radius:10px;
-    border:1px solid #FFF;
-    padding:10px;
-    color:#ffffff;
-    cursor:pointer;
-    font-weight:bold;
-    margin:25px;
-    box-shadow:2px 2px 2px rgba(0,0,0,0.3);
-    text-shadow:1px 1px 1px rgba(0,0,0,0.3)
+body{
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        font-family: 18px;
 }
-.second-color
-{background:#9bc417 !important;}
+li{
+    list-style: none;
+    line-height: 2em;
+    text-align: left;
+}
+
+.header{
+    background:#f4f4f4;
+    border-bottom: #ccc 3px solid;
+}
+
+.container{
+    width: 700px;
+    margin: 30px auto;
+}
