--- a/finalstyle.css
+++ b/finalstyle.css
@@ -1,1 +1,76 @@
 /* FinalStyle.css */
+$bannerBG: 'https://picsum.photos/1200/600';
+
+* { 
+  margin: 0;
+  box-sizing: border-box;
+}
+body { font-family: sans-serif; }
+
+// Utilites from CMS
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.col-6 {
+    flex: 0 0 50%;
+    // max-width: 50%;
+}
+.h-100 { height: 100% !important; }
+.p-5 { padding: 3rem !important; }
+
+
+#section01 {
+  overflow: hidden; 
+  
+  .row { flex-direction: row-reverse; }
+  
+  .bannerImage {
+    background: url($bannerBG);
+    background-size:cover;
+    background-position: center center;
+    background-color: #037272;
+  }
+  
+  .bannerText {
+    background-color: #037272;
+    position: relative;
+    z-index: 1;
+    
+    .oval {
+      position: absolute;
+      background-color: #037272;
+      top: -50%;
+      right: 0;
+      border-radius: 100%;
+      z-index: -1;
+      content: '';
+    }
+  }
+}
+
+@media screen and (max-width:991px){
+  #section01 {
+    .row { display: block; }
+    .bannerText { padding: 0 0 3em !important; }
+    .bannerText > .p-5 { padding: 1rem 2rem !important; }
+  }
+}
+/* #section01 {
+height: ${bannerHeight}px;
+}*/
+h1,
+h3 {
+  margin-bottom: 24px;
+  color:#fff; 
+}
+p{ 
+  color:#d8d8d8;
+}
+h1 {
+  font-size: 48px;
+}
+h3,
+p {
+  font-size: 18px;
+}
